--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+.results {
+  border: 1px solid black;
+  margin: 10px;
+  padding: 10px;
+}
+
+input {
+  margin-bottom: 10px;
+}
