--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -31,6 +31,7 @@
   </div>
   {% for email in emails %}
     <div class="row results">
+      <button type="submit" id="close_email"><i class="fa fa-times-circle fa-lg"></i></button>
       <p>To: {{ email[0] }} {{ email[1] }} {{ email[2] }}</p>
       <p>Subject: {{ subject }}</p>
       <p> Hey {{ email[0] }}</p>
