--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -9,10 +9,16 @@ a {
 
 .results {
   border: 1px solid black;
+  border-radius: 5px;
+  background-color: grey;
   margin: 10px;
   padding: 10px;
 }
 
 input {
   margin-bottom: 10px;
+}
+
+#close_email {
+  float: right;
 }
