--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -14,7 +14,7 @@ textarea[name = Emails] {
 .results {
   border: 1px solid black;
   border-radius: 5px;
-  background-color: grey;
+  background-color: #d8d8d8;
   margin: 10px;
   padding: 10px;
 }
@@ -25,4 +25,5 @@ input {
 
 #close_email {
   float: right;
+  border-radius: 100px;
 }
