--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -35,7 +35,7 @@
       <button type="submit" id="close_email"><i class="fa fa-times-circle fa-lg"></i></button>
       <p>To: {{ email[0] }} {{ email[1] }} &#60;{{ email[2] }}&#62;</p>
       <p>Subject: {{ subject }}</p>
-      <p> Hey {{ email[0] }}</p>
+      <p> Hey {{ email[0] }},</p>
       <p>{{ body }}</p>
     </div>
   {% endfor %}
